allow expanding and folding metadata lists
- add <fold/> element in metadaList config
- initially only show metadata elements before "fold" in
metadataElement.xhtml
- Expand to all metadata on button click
- add tests for MetadataElement and config

refs #27444